public/home.css
/*css for home page*/
#home_body{
	background-image: url("images/gramaphone_3.jpg");
	background-size: 100% 100%;
	background-repeat:no-repeat;
	background-attachment: fixed;
	opacity:.9;
	padding:100px;
	text-align: center;
	min-height: 200vh;
}

.flash {
	color: green;
	padding: 10px;
}


.textbox{
	opacity: .7;
	margin-top: 50px;
}

.newhumm{
	font: black;
	font-weight: bold;
	font-size: 12px;
}

li{
	display: inline-block;
	text-align: center;
	padding: 10px;
	text-decoration: none;
	font-size: 24px;
	border: 1px solid black;
	border-radius: 20px;
	position: relative;
	right: 20px;
}

#nav:link, #nav:visited, #nav:active{
	text-decoration: none;
	color: black;
 }

.container{
	height: auto;
	width: 600px;
	text-align: justify;
	margin: 10px auto;
	margin-top: 40px;
}

.live_post{
/*	background-color: rgba(49,189,127,.5);
	color:rgb(0,0,0);
	border-radius: 15px;*/
	height: auto;
	background-color: rgba(16,17,64,.3);
    border-radius: 20px;
}

#prof_username{
	font-size: 55px;
	color: purple;
	font-weight: bold;
}
#loves{
	color: #A1F0D3;
	font-weight: bold;
	font-size: 30px;
}

#prof_bio{
	font-size: 25px;
	color: #102B4C;
	font-weight: bold;
}

#userlist{
	text-align: center;
}

.account_form{
	background-color: rgba(49,189,127,.5);
	margin: auto;
	margin-top: 60px;
	width: 500px;
}

.footer{
	border: dashed;
}

#navbar ul{
	text-align: center;
	margin-top: 0px;
	margin-bottom: 0px;
}

#sign_in_body{
	background-color: black;
	width: 100%;
	height: 100vh;
}

#sign_in_page{
	background-image: url(BW_Bike.jpg);
	background-size: 100%;
	background-repeat: no-repeat;
	width: 800px;
	height: 550px;
	margin: 0 auto;
	border: 5px solid black;
	border-radius: 10px 10px;
	position: relative;
	top: 25px;
}

#opaque{
	background-color: rgba(152,152,152,.2);
	width: 350px;
	height: 250px;
	position: relative;
	top: 150px;
	margin: 0 auto;
	border-radius: 5px;
}



#smiles{
	padding: 10px;
	font-size: 65px;
	color: green;
	text-align: center;
	font-family: 'Slabo 27px', serif;
	font-weight: bold;
}

#new_user{
	position: absolute;
	top: 420px;
	left: 300px;
	background: black;
    border: solid 1px #2A4E77;
    border-radius: 10px;
    color: white;
    font-size: 20px;   
}

 #sam:link, #sam:visited, #sam:active{
	text-decoration: none;
	color: white;
 }

#sign_up{
	background-color: rgba(152,152,152,.9);
	width: 350px;
	height: 295px;
	position: fixed;
	left: 468px;
	bottom: 158px;
	text-align: right;
	border-radius: 10px;
}

#info{
	text-align: center;
	color: black;
	font-size: 20px;
}

#large{
	font-weight: bold;
}
#now{
	text-align: center;
}

#posty{
	background-color: blue;
	color: white;
	border: 1px solid red;
}

#mine{
	background-color: green;
}

#delete_account{
	margin-top: 100px;
	border-radius: 5px;
	background-color: black;
}

#deletelink:link, #deletelink:visited, #deletelink:active {
	text-decoration: none;
	color: red;
	font-size: 20px;

}

#nodec:link,#nodec:visited, #nodec:active {
	text-decoration: none;
	color: black;
}

